# SVEAssistedModelling

./: .gitignore  AGENTS.md  README.md  project_state.json  pyproject.toml
downstream/: .gitignore  case_study.py  datapipeline.py  dataset.py  main.py  model.py  nn_utils.py  pdb_utils.py  prepare_data.py  process.py  protac.yml  protacloader.py  regression_preprocess.py  tools.py  train_and_test.py  train_regression.py
molsim/: __init__.py  metrics.py
notebooks/: experiment_runner_and_analysis.ipynb  pictorial_results.html
results/: RESULTS_LOG.md  degrademaster_results.json  experiment_log.jsonl  model_diagnostics.json  paper_spatial_molecular_embeddings.docx  paper_spatial_molecular_embeddings.md
scripts/: build_academic_report.py  build_assignment2_report.py  build_degrademaster_sve_dataset.py  build_molsim_module_report.py  build_paper.py  build_result_diagnostics.py  build_results_paper.py  build_visualization_index.py  degrademaster_run_utils.py  export_degrademaster_embeddings.py  export_degrademaster_protac_embeddings.py  export_graph_spatial_embeddings.py  export_notebook.py  export_week4_bias_logbook.py  export_week5_transparency_logbook.py  generate_report_examples.py  log_degrademaster_result.py  paper_figures.py  prepare_datasets.py  prepare_degrademaster_sve_experiment.py  result_showcase.py  run_degrademaster_classification.py  run_degrademaster_classification_single.py  run_degrademaster_comparison.py  run_degrademaster_regression.py  run_degrademaster_regression_preprocess.py  run_degrademaster_regression_single.py  train_graph_to_voxel.py  (+4 more)
(+43 files in other folders)
