[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molsim-spatial-gnn"
version = "0.1.0"
description = "Spatially-aware molecular GNN research scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "plotly>=5.20",
  "scikit-learn>=1.3",
  "torch>=2.2",
  "torch-geometric>=2.5",
]

[tool.setuptools.packages.find]
where = ["."]
